# bloodlogs-bot

./: .env.example  .gitignore  Cargo.toml  Makefile  README.md
migrations/: 001_init.sql  002_bot_settings.sql  003_chat_activity.sql  004_logged_chats.sql  005_watch_display.sql  006_watch_timers_unique.sql  007_bot_inaccessible_chats.sql
src/: config.rs  main.rs  messages.rs  state.rs
src/commands/: badd.rs  balltimer.rs  bchannel.rs  bdell.rs  bhelp.rs  btimer.rs  btimerclear.rs  btimerdel.rs  btimers.rs  logs.rs  mod.rs
src/jobs/: mod.rs  relay.rs  watch.rs
